# BD_Assignment_Spark

./: .gitignore  README.md  pyproject.toml  run_spark.py
bd_transformer/: __init__.py  consts.py  transformer.py
bd_transformer/components/: __init__.py  converter.py  normalizer.py
config/: config.yaml
data/: 001.parquet
tests/: README.md
tests/comparison/: compare_results.py  run_pandas_test.py  run_spark_test.py
tests/pandas_comparison/data/: pandas_inversed.parquet  pandas_original.parquet
tests/pandas_comparison/scripts/: compare_results.py  run_pandas_test.py  run_spark_test.py
tests/results/: spark_inversed.parquet  spark_transformed.parquet
tests/test_on_large_dataset/: README.md
tests/test_on_large_dataset/data/resource_monitoring/: system_specs.txt  timing_results.txt
tests/test_on_large_dataset/scripts/: data_gen.py  resource_monitor.py
